# splitsphere

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev.backend  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/splitsphere/: main.py
backend/splitsphere/core/: config.py  database.py
backend/splitsphere/models/: __init__.py  base.py  user.py
backend/splitsphere/schemas/: __init__.py  user.py
frontend/: .eslintrc.json  .gitignore  .prettierrc  Dockerfile.dev.frontend  Dockerfile.frontend  README.md  next.config.ts  package.json  tsconfig.test.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BalanceSummary.tsx  DateDisplay.tsx  ExpenseDialog.tsx  ExpenseList.tsx  ExpensePopout.tsx  MobileTabBar.tsx  SettleUpDialog.tsx  Sidebar.tsx  SyncStatus.tsx  TestDataGenerator.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/expense/: ExpenseEdit.tsx  ExpenseView.tsx  SettlementsList.tsx  SplitEditor.tsx
frontend/src/components/providers/: DbProvider.tsx  LayoutWrapper.tsx
frontend/src/hooks/: usePercentageSplitValidation.ts  useSplitLogic.ts
frontend/src/lib/: constants.ts  db.ts  generate-dummy-data.ts  splitCalculator.ts  sync.ts  utils.ts
frontend/src/store/: expense-store.ts  friends-store.ts  groups-store.ts
frontend/src/styles/: animations.css
frontend/src/tests/: README.md  setup.ts  splitCalculator.test.ts  types.d.ts  utils.test.ts
frontend/src/types/: expense.ts  group.ts
(+9 files in other folders)
